--- a/css/styles.css
+++ b/css/styles.css
@@ -156,6 +156,9 @@ body {
 .communication-color-link {
   color: var(--color-theme-light-secondary);
 }
+.properties-link{
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .properties-link:hover,
 .properties-link:focus .properties-link:active {
   color: var(--color-accent);
@@ -163,6 +166,7 @@ body {
 .communication-icon {
   margin-right: 10px;
   fill: var(--color-theme-light-secondary);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .properties-link:hover .communication-icon,
@@ -170,6 +174,9 @@ body {
 .properties-link:active .communication-icon {
   fill: var(--color-accent);
 }
+
+
+
 
 /*-----СЕКЦИЯ HERO-----*/
 
@@ -353,9 +360,11 @@ body {
   height: 44px;
   background-color: #ffffff;
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-social-list {
   fill: var(--color-theme-light-secondary);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-list-link:hover .icon-social-list,
 .social-list-link:focus .icon-social-list {
@@ -396,28 +405,26 @@ body {
 .studio-clients-item-element:last-child {
   margin-right: 0;
 }
-.studio-clients-item-element:hover {
-  border: 1px solid var(--color-accent);
-}
+
 .icon-clients-list {
   display: flex;
-  width: 106px;
-  height: 60px;
+  width: 170px;
+  height: 92px;
   align-items: center;
   justify-content: center;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .studio-clients-item-element.studio-clients-item-element:last-child {
   margin-right: 0;
 }
 .icon-clients-list {
-  fill: var(--color-theme-light-secondary);
+  fill: #afb1b8;
 }
 .icon-clients-list:hover,
 .icon-clients-list:focus {
   fill: var(--color-accent);
+  border: 1px solid var(--color-accent);
 }
-
-/*-----FOOTER-----*/
 
 /*-----FOOTER-----*/
 .footer {
@@ -489,9 +496,11 @@ body {
   height: 44px;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-social-media-list {
   fill: rgba(255, 255, 255, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-media-list-link:hover .icon-social-media-list,
 .social-media-list-link:focus .icon-social-media-list {
@@ -501,6 +510,46 @@ body {
 .social-media-list-link:focus {
   background-color: var(--color-accent);
 }
+/*-----МОДАЛЬНОЕ ОКНО-----*/
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.25);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 528px;
+  height: 580px;
+  background-color: #ffffff;
+}
+.modal-close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: transparent;
+  padding: 0;
+  cursor: pointer;
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
 /*===========================PORTFOLIO=====================================*/
 
 /*-----ФИЛЬТРЫ-----*/
@@ -508,7 +557,7 @@ body {
 .portfolio-filter-container {
   display: flex;
   justify-content: center;
-  margin-bottom: 50px;
+  
   flex-wrap: wrap;
 }
 .button-properties-list {
@@ -517,6 +566,9 @@ body {
 
 .button-properties-list:last-child {
   margin-right: 0;
+}
+.button-properties{
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-filter {
   font-family: var(--font-family-primary);
@@ -527,17 +579,21 @@ body {
   letter-spacing: var(--latter-spacing-mean);
   min-width: 74px;
   padding: 6px 22px;
-
   border-radius: 4px;
   border: none;
   background-color: var(--background-color-section-team);
   color: #212121;
   cursor: pointer;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-filter:hover,
 .portfolio-filter:focus {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+.portfolio-filter:current {
+  color: var(--color-theme-dark-primary);
+  background-color: var(--background-color-button);
 }
 /*-----ПРИМЕРЫ РАБОТ-----*/
 .portfolio-example-container {
@@ -545,11 +601,12 @@ body {
   flex-wrap: wrap;
   margin-left: -30px;
   margin-top: -30px;
+  margin-top: 50px;
 }
-
 .portfolio-example-element {
   fill: solid #ffffff;
   border: 1px solid rgba(238, 238, 238, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-example-element:hover {
   box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16);
@@ -590,3 +647,33 @@ body {
   letter-spacing: var(--latter-spacing-mean);
   color: var(--color-theme-light-secondary);
 }
+.portfolio-work-example-wrapper{
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-family: var(--font-family-primary);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: var(--latter-spacing-mean);
+  color: var(--color-theme-dark-primary);
+  background-color: rgba(33, 150, 243, 0.9);
+  padding: 63px 24px;
+  overflow: hidden;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-example-link:hover .overlay,
+.portfolio-example-link:focus .overlay {
+  transform: translateY(0%);
+}
+
+
+
