--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,6 @@
 .link {
   text-decoration: none;
 }
-.current {
-  color: #2196f3;
-}
 ul {
   list-style: none;
 }
@@ -103,10 +100,7 @@ body {
 /*-----HEADER-----*/
 .header {
   background: #ffffff;
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-  border-bottom-color: #ececec;
-  padding: 24px 0;
+  border-bottom: 1px solid #ececec;
 }
 .header-container {
   display: flex;
@@ -129,15 +123,36 @@ body {
   color: #2196f3;
 }
 .navigation-list {
+  display: flex;
+}
+.nav-list-item:not(:last-child) {
+  margin-right: 50px;
+}
+.properties-link {
+  position: relative;
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: var(--latter-spacing-minimum);
   color: var(--color-theme-light-primary);
-  display: flex;
   align-items: center;
+  cursor: pointer;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.nav-list-item:not(:last-child) {
-  margin-right: 50px;
+.properties-link.current{
+  color: #2196f3;
+}
+.properties-link.current::after {
+  content: '';
+  position: absolute;
+  bottom: -3px;
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color:var(--background-color-button);
 }
 
 .communication {
@@ -156,9 +171,6 @@ body {
 .communication-color-link {
   color: var(--color-theme-light-secondary);
 }
-.properties-link{
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 .properties-link:hover,
 .properties-link:focus .properties-link:active {
   color: var(--color-accent);
@@ -168,7 +180,6 @@ body {
   fill: var(--color-theme-light-secondary);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .properties-link:hover .communication-icon,
 .properties-link:focus .communication-icon,
 .properties-link:active .communication-icon {
@@ -290,6 +301,32 @@ body {
 }
 .studio-competencies-item-element:last-child {
   margin-right: 0;
+}
+.studio-competencies-thumb{
+  position: relative;
+}
+.overlay-competencies{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  bottom: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(47, 48, 58, 0.8);
+  overflow: hidden;
+}
+.overlay-competencies-text{
+font-family: var(--font-family-primary);
+font-size: 14px;
+font-weight: 700;
+line-height: 16px;
+padding-left: 1px;
+letter-spacing: var(--latter-spacing-mean);
+text-transform: uppercase;
+color: var(--color-theme-dark-primary);
 }
 /*-----СЕКЦИЯ НАША КОМАНДА-----*/
 .studio-section-team {
