--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,9 @@
 .link {
   text-decoration: none;
 }
+.current {
+  color: #2196f3;
+}
 ul {
   list-style: none;
 }
@@ -139,7 +142,6 @@ body {
   color: var(--color-theme-light-primary);
   align-items: center;
   cursor: pointer;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .properties-link.current{
   color: #2196f3;
@@ -564,6 +566,7 @@ color: var(--color-theme-dark-primary);
   transform: translate(-50%,-50%);
   width: 528px;
   height: 580px;
+  border-radius: 4px;
   background-color: #ffffff;
 }
 .modal-close-btn {
@@ -600,7 +603,9 @@ color: var(--color-theme-dark-primary);
 .button-properties-list {
   margin-right: 8px;
 }
-
+.button-properties-list.current {
+  background-color: #2196f3;
+}
 .button-properties-list:last-child {
   margin-right: 0;
 }
